Append security of deleteMany. Refactor test according this
Signed-off-by: renaud colin <renaud.colin@inra.fr>